--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 		
 		<!-- video -->
 		<video autoplay="" loop="" id="player">
-		<source src="video.mp4" type="video/mp4">
+		<source src="vid.mp4" type="video/mp4">
 		<script>
 		var video = document.currentScript.parentElement;
 		video.volume = 0.0;
@@ -44,7 +44,7 @@ body {
 		
 		<!-- audio -->
 		<audio autoplay="" loop="" id="player1">
-		<source src="music/steps.mp3">
+		<source src="music/song.mp3">
 		<script>
 		var vid = document.getElementById("player1");
 		vid.volume = 0.5;
