--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ body {
 
 		<!-- title -->
 		<div id="center">
-		<center><a href="http://steamcommunity.com/id/tayvrs/" target="_blank" style="font-size:64px">tays</a><center>
+		<center><a href="http://steamcommunity.com/id/tayvrs/" target="_blank" style="font-size:64px">bleed</a><center>
 		
 		<!-- links -->
-		\ <a href="https://www.twitch.tv/tays" target="_blank">twitch</a> - <a href="" target="_blank">t@bleed.cc</a> / 
+		\ <a href="https://www.steamcommunity.com/id/tayvrs" target="_blank">tays</a> - <a href="https://www.steamcommunity.com/id/highfy" target="_blank">ally</a> - <a href="https://www.steamcommunity.com/id/fakelby" target="_blank">lolzy</a> / 
 		</center></center></div>
 		
 		
