tayvrs.github.io
tayvrs.github.io

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			  			<div class="bottom-text">
 			  				<h1>Syhre is launching soon.</h1>
 				  			<p>
-							Syhre is an Esports Organization in the persuit of producing talents within the gaming community and professional scene.  
+							Syhre is an Esports Organization in the pursuit of producing talents within the gaming community and professional scene.  
 				  			</p>			  				
 			  			</div>			  						  			   			
 
