tayvrs.github.io
tayvrs.github.io

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
    	<div class="row">
    		<div class="logo">
-	         <a href="index.html">Khronos</a>
-	      </div> 
+	         </div> 
 
 			<div class="social-links">
 			   <ul>
@@ -139,7 +138,7 @@
                                          <h3 class="h05">CEO</h3>
 						            	 <h3 class="h05">Joshua Taylor</h3>
 										 
-							            <p>Josh founded Syhre along with Zak in early 2019 after deciding he wanted to pursue his dream in working in the Esports Industry. Josh was first introduced to gaming at the age of three playing Medal of Honor: Rising Sun on his uncles Xbox. Years later he has became a very well versed competetive player across many Esports titles and hopes to one day compete at the highest level.
+							            <p>Josh founded Syhre along with Zak in early 2019 after deciding he wanted to pursue his dream in working in the Esports Industry. Josh was first introduced to gaming at the age of three playing Medal of Honor: Rising Sun on his uncles Xbox. Years later he has became a very well versed competitive player across many Esports titles and hopes to one day compete at the highest level.
 						         		</p>
 						         		
 						         	</div> 	         	 
